--- a/templates/article.html
+++ b/templates/article.html
@@ -56,7 +56,7 @@
     </div>
 </div>
 <div class="panel-body">
-    <p>
+    <p data-toggle="tooltip" title="{{item.fichier|escape()}}">
         <span class="label label-default">{{ item.taille }}</span>
         <span class="label label-default">{{ item.annee }}</span><br>
         {{ item.fichier|truncate(40) }}<br>
@@ -66,7 +66,7 @@
     {% if item.recherche|length > 0 %}
     <div class="list-group collapse" id="recresult_{{ item.id }}">
         {% for item_recherche in item.recherche %}
-          <button type="button" class="list-group-item resultat_recherche" id="recherche_{{ item_recherche.id }}" onclick="envoyer_sab({{ item_recherche.id }}, {{ item.id }})"><span class="badge">{{ item_recherche.taille }}</span>{{ item_recherche.title|truncate(40) }}</button>
+          <button type="button" class="list-group-item resultat_recherche" id="recherche_{{ item_recherche.id }}" onclick="envoyer_sab({{ item_recherche.id }}, {{ item.id }})" data-toggle="tooltip" title="{{ item_recherche.title|escape() }}"><span class="badge">{{ item_recherche.taille }}</span>{{ item_recherche.title|truncate(40) }}</button>
         {% endfor %}
     </div>
     {% endif %}
