--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -30,8 +30,9 @@
         <div class="row">
             {% include 'barre_categorie.html' %}
         </div>
-        <div class="row categorie">
+<!--         <div class="row categorie">
         <div class="col-md-8">
+            {% include 'categorie.html' %}
             <div class="panel panel-danger">
                 <div class="panel-heading">
                     <div class="btn-group" role="group" aria-label="...">
@@ -42,17 +43,17 @@
                         </h1>
                     </div>
                 </div>
-                <!-- <div class="panel-body"/> -->
             </div>
         </div>
         </div>
-        <div class="row" id="cat_favoris">
-            {% for item in favoris %}
+ -->
+ <!--    <div class="row" id="cat_favoris">
+        {% for item in favoris %}
                 {% include 'article.html' %}
             {% endfor %}
-        </div>
-        {% for categorie, taille, items, categorie_id in articles %}
-            <div class="row categorie" id="cat_{{ categorie_id }}">
+        </div>-->
+        {% for categorie, items, categorie_id in articles %}
+<!--             <div class="row categorie" id="cat_{{ categorie_id }}">
                 <div class="col-md-8">
                     <div class="panel panel-danger">
                         <div class="panel-heading">
@@ -64,11 +65,12 @@
                                 </h1>
                             </div>
                         </div>
-                        <!-- <div class="panel-body"/> -->
                     </div>
                 </div>
             </div>
-            <div class="row">
+ -->           
+            {% include 'categorie.html' %}
+            <div class="row" id="items_{{categorie_id}}">
             {% for item in items %}
                 {% include 'article.html' %}
             {% endfor %}
