--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -30,47 +30,9 @@
         <div class="row">
             {% include 'barre_categorie.html' %}
         </div>
-<!--         <div class="row categorie">
-        <div class="col-md-8">
+        {% for categorie, items in articles %}
             {% include 'categorie.html' %}
-            <div class="panel panel-danger">
-                <div class="panel-heading">
-                    <div class="btn-group" role="group" aria-label="...">
-                        <h1>Favoris <span class="badge">{{ favoris|length }}</span>
-                            <button class="btn btn-danger" onclick="marquer_lu([{% for item in favoris %}{{ item.id }},{% endfor %}])">
-                                <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
-                            </button>
-                        </h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
- -->
- <!--    <div class="row" id="cat_favoris">
-        {% for item in favoris %}
-                {% include 'article.html' %}
-            {% endfor %}
-        </div>-->
-        {% for categorie, items, categorie_id in articles %}
-<!--             <div class="row categorie" id="cat_{{ categorie_id }}">
-                <div class="col-md-8">
-                    <div class="panel panel-danger">
-                        <div class="panel-heading">
-                            <div class="btn-group" role="group" aria-label="...">
-                                <h1>{{ categorie }} <span class="badge">{{ taille }}</span>
-                                    <button class="btn btn-danger" onclick="marquer_lu([{% for item in items %}{{ item.id }},{% endfor %}])">
-                                        <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
-                                    </button>
-                                </h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
- -->           
-            {% include 'categorie.html' %}
-            <div class="row" id="items_{{categorie_id}}">
+            <div class="row" id="items_{{categorie.id}}">
             {% for item in items %}
                 {% include 'article.html' %}
             {% endfor %}
