--- a/templates/article.html
+++ b/templates/article.html
@@ -18,10 +18,10 @@
     <div class="btn-group" role="group" aria-label="...">
         <h4>
         <a href="{{ item.link }}" target="_blank">{{ item.title }}</a>
-        <button class="btn btn-default" onclick="marquer_lu([{{ item.id }}])">
+        <button class="btn btn-default" onclick="marquer_lu([{{ item.id }} ], {{ item.categorie.id}})">
             <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
         </button>
-        <button class="btn btn-default" onclick="marquer_favoris({{ item.id }}, {{categorie.id}}, {{ categorie_favoris_id }})">
+        <button class="btn btn-default" onclick="marquer_favoris({{ item.id }}, {{ item.categorie.id}}, {{ categorie_favoris_id }})">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"/>
         </button>
         <button class="btn btn-default" onclick="lancer_recherche({{ item.id }})">
