Ajout d'un bloc categorie à la fin

--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -37,6 +37,7 @@
                 {% include 'article.html' %}
             {% endfor %}
             </div>
+            {% include 'categorie_end.html' %}
         {% endfor %}
     </div>
 </body>
