--- a/templates/barre_categorie.html
+++ b/templates/barre_categorie.html
@@ -1,7 +1,12 @@
 <div class="row" id='barre_categorie'>
     {% for categorie, items in articles %}
     	<div class="col-md-2">
-    		<a href="#cat_{{ categorie.id }}"><h4>{{ categorie.nom }}  <span class="badge">{{ items|length }}</span></h4></a>
+            <h4>
+        		<a href="#cat_{{ categorie.id }}">{{ categorie.nom }}  <span class="badge">{{ items|length }}</span></a>
+                <button class="btn btn-danger btn-xs" onclick="marquer_lu([{% for item in items %}{{ item.id }},{% endfor %}], {{ categorie.id}})">
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
+                </button>
+            </h4>
     	</div>
     {% endfor %}
 </div>
