Mise a jour de la barre
Quand marqué comme lu

--- a/templates/barre_categorie.html
+++ b/templates/barre_categorie.html
@@ -3,7 +3,7 @@
     	<div class="col-md-2">
             <h4>
         		<a href="#cat_{{ categorie.id }}">{{ categorie.nom }}  <span class="badge">{{ items|length }}</span></a>
-                <button class="btn btn-danger btn-xs" onclick="marquer_lu([{% for item in items %}{{ item.id }},{% endfor %}], {{ categorie.id}})">
+                <button class="btn btn-danger btn-xs" onclick="marquer_lu_barre([{% for item in items %}{{ item.id }},{% endfor %}], {{ categorie.id}})">
                     <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
                 </button>
             </h4>
