--- a/templates/article.html
+++ b/templates/article.html
@@ -66,7 +66,11 @@
     {% if item.recherche|length > 0 %}
     <div class="list-group collapse" id="recresult_{{ item.id }}">
         {% for item_recherche in item.recherche %}
+            {% if item_recherche.id_sabnzbd != '' %}
+          <button type="button" class="list-group-item list-group-item-danger resultat_recherche" id="recherche_{{ item_recherche.id }}" data-toggle="tooltip" title="{{ item_recherche.title|escape() }}"><span class="badge">{{ item_recherche.taille }}</span>{{ item_recherche.title|truncate(40) }}</button>
+            {% else %}
           <button type="button" class="list-group-item resultat_recherche" id="recherche_{{ item_recherche.id }}" onclick="envoyer_sab({{ item_recherche.id }}, {{ item.id }})" data-toggle="tooltip" title="{{ item_recherche.title|escape() }}"><span class="badge">{{ item_recherche.taille }}</span>{{ item_recherche.title|truncate(40) }}</button>
+            {% endif %}
         {% endfor %}
     </div>
     {% endif %}
