--- a/templates/categorie.html
+++ b/templates/categorie.html
@@ -7,6 +7,11 @@
                         <button class="btn btn-danger" onclick="marquer_lu([{% for item in items %}{{ item.id }},{% endfor %}], {{ categorie.id}})">
                             <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
                         </button>
+                        {%if categorie.ids_termine|length > 0 %}
+                        <button class="btn btn-info" onclick="marquer_lu([{% for item in categorie.ids_termine %}{{ item }},{% endfor %}], {{ categorie.id}})">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
+                        </button>
+                        {% endif %}
                     </h1>
                 </div>
             </div>
