Ajout lien retour

--- a/templates/categories_index.html
+++ b/templates/categories_index.html
@@ -25,7 +25,7 @@
 <body>
     <div class="container-fluid" id="app">
         <div class="page-header">
-        <h1>Categories <span class="badge">Minisab {{ version }}</span></h1>
+        <h1>Categories <a href="/"><span class="badge">Minisab {{ version }}</span></a></h1>
         </div>
         <div class="row">
         {% for categorie in categories %}
