--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -30,7 +30,7 @@
                     <h1>Minisab <span class="badge">{{ version }}</span></h1>
                 </div>
                 <div class="col-md-1">
-                    <h1><a class="btn btn-link btn-lg" href="/categories/index"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a></h1>
+                    <h1><a class="btn btn-link btn-lg" href="/categories/index/"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a></h1>
                 </div>
             </div>
         </div>
