Debut mise en place page historique
probleme d'url sur bootstrap

--- a/templates/categorie.html
+++ b/templates/categorie.html
@@ -12,6 +12,9 @@
                             <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
                         </button>
                         {% endif %}
+                        <a class="btn btn-warning" href="/categorie/historique/{{ categorie.id }}">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
+                        </a>
                     </h1>
                 </div>
             </div>
