--- a/templates/article_light.html
+++ b/templates/article_light.html
@@ -6,7 +6,7 @@
     <div class="btn-group" role="group" aria-label="...">
         <h4>
         <a href="{{ item.link }}" target="_blank">{{ item.title }}</a>
-        <button class="btn btn-default" onclick="marquer_lu([{{ item.id }} ], {{ item.categorie.id}})">
+        <button class="btn btn-default" onclick="marquer_lu('{{ url_for('minisab.marquer_article_lu') }}', [{{ item.id }} ], {{ item.categorie.id}})">
             <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
         </button>
         <button class="btn btn-default" onclick="marquer_favoris({{ item.id }}, {{ item.categorie.id}}, {{ categorie_favoris_id }})">
