--- a/templates/minifluxlistcomplete.html
+++ b/templates/minifluxlistcomplete.html
@@ -27,13 +27,37 @@
         <div class="page-header">
             <div class="row">
                 <div class="col-md-11">
-                    <h1>Minisab Historique {{ categorie }}<span class="badge">{{ version }}</span></h1>
+                    <h1>Minisab Historique {{ categorie.nom }} [ {{ num_bloc * taille_bloc }} - {{ (num_bloc+1) * taille_bloc }} / {{ nb_bloc * taille_bloc }} ]<span class="badge">{{ version }}</span></h1>
                 </div>
                 <div class="col-md-1">
                     <h1><a class="btn btn-link btn-lg" href="{{ url_for('minisab.index') }}"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a></h1>
                 </div>
             </div>
         </div>
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                {% for x in range(nb_bloc) %}
+                    <li class="{{ 'active' if x == num_bloc }}">
+                        <a href="{{ url_for('minisab.categorie_historique', id_categorie=categorie.id, taille_bloc=taille_bloc, num_bloc=x) }}">{{ x }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </nav>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse">
+                  <button type="button" class="navbar-btn btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{ taille_bloc }} <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a href="{{ url_for('minisab.categorie_historique', id_categorie=categorie.id, taille_bloc=50, num_bloc=0) }}">50</a></li>
+                    <li><a href="{{ url_for('minisab.categorie_historique', id_categorie=categorie.id, taille_bloc=100, num_bloc=0) }}">100</a></li>
+                    <li><a href="{{ url_for('minisab.categorie_historique', id_categorie=categorie.id, taille_bloc=200, num_bloc=0) }}">200</a></li>
+                    <li><a href="{{ url_for('minisab.categorie_historique', id_categorie=categorie.id, taille_bloc=400, num_bloc=0) }}">400</a></li>
+                  </ul>                       
+                </div>
+            </div>
+        </nav>
         {% for item in articles %}
             {% include 'article_light.html' %}
         {% endfor %}
