--- a/templates/categorie.html
+++ b/templates/categorie.html
@@ -8,7 +8,7 @@
                             <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
                         </button>
                         {%if categorie.ids_termine|length > 0 %}
-                        <button class="btn btn-info" onclick="marquer_lu('{{ url_for('minisab.marquer_article_lu') }}', [{% for item in categorie.ids_termine %}{{ item }},{% endfor %}], {{ categorie.id}})">
+                        <button class="btn btn-info" onclick="marquer_lu([{% for item in categorie.ids_termine %}{{ item }},{% endfor %}], {{ categorie.id}})">
                             <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
                         </button>
                         {% endif %}
