--- a/templates/article_light.html
+++ b/templates/article_light.html
@@ -4,7 +4,7 @@
             <a href="{{ item.link }}" target="_blank">{{ item.title }}</a>
             <span class="label label-default">{{ item.taille }}</span>
             <span class="label label-default">{{ item.annee }}</span>
-            <button class="btn btn-xs btn-default" onclick="marquer_lu('{{ url_for('minisab.marquer_article_lu') }}', [{{ item.id }} ], {{ item.categorie.id}})">
+            <button class="btn btn-xs btn-default" onclick="marquer_lu('{{ url_for('minisab.marquer_article_lu', lunonlu=1) }}', [{{ item.id }} ], {{ item.categorie.id}})">
                 <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
             </button>
         </div>
