--- a/templates/minifluxlistcomplete.html
+++ b/templates/minifluxlistcomplete.html
@@ -27,7 +27,7 @@
         <div class="page-header">
             <div class="row">
                 <div class="col-md-11">
-                    <h1>Minisab Historique {{ categorie.nom }} [ {{ num_bloc * taille_bloc }} - {{ (num_bloc+1) * taille_bloc }} / {{ nb_bloc * taille_bloc }} ]<span class="badge">{{ version }}</span></h1>
+                    <h1>Minisab Historique <span class="label label-default">{{ categorie.nom }}</span> [ {{ num_bloc * taille_bloc }} - {{ (num_bloc * taille_bloc) + articles|length }} ]<span class="badge">{{ version }}</span></h1>
                 </div>
                 <div class="col-md-1">
                     <h1><a class="btn btn-link btn-lg" href="{{ url_for('minisab.index') }}"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a></h1>
