--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -9,12 +9,12 @@
     <title>Minisab</title>
 
     <!-- Bootstrap -->
-    <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('minisab.static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="static/jquery-3.2.1.js"></script>
-    <script src="static/minisab.js"></script>
+    <script src="{{ url_for('minisab.static', filename='jquery-3.2.1.js') }}"></script>
+    <script src="{{ url_for('minisab.static', filename='minisab.js') }}"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('minisab.static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -30,7 +30,7 @@
                     <h1>Minisab <span class="badge">{{ version }}</span></h1>
                 </div>
                 <div class="col-md-1">
-                    <h1><a class="btn btn-link btn-lg" href="/categories/index/"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a></h1>
+                    <h1><a class="btn btn-link btn-lg" href="{{ url_for('minisab.categories_index') }}"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a></h1>
                 </div>
             </div>
         </div>
