Mise en place du filtre d'article non parametrable

--- a/templates/article.html
+++ b/templates/article.html
@@ -9,6 +9,8 @@
     {% else %}
         <div class="panel panel-info article article_recherche">
     {% endif %}
+{% elif item.filtre == True %}
+    <div class="panel panel-danger article">
 {% else %}
 <div class="panel panel-default article">
 {% endif %}
