--- a/templates/categorie.html
+++ b/templates/categorie.html
@@ -9,6 +9,11 @@
                                 <button class="btn btn-danger" onclick="marquer_lu('{{ url_for('minisab.marquer_article_lu', lunonlu=0) }}', [{% for item in items %}{{ item.id }},{% endfor %}], {{ categorie.id}})">
                                     <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
                                 </button>
+                                {%if categorie.avec_filtre == True %}
+                                <button class="btn btn-warning" onclick="marquer_lu('{{ url_for('minisab.marquer_article_lu', lunonlu=0) }}', [{% for item in items %}{%if item.filtre == True %}{{ item.id }},{% endif %}{% endfor %}], {{ categorie.id}})">
+                                    <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
+                                </button>
+                                {% endif %}
                                 {%if categorie.ids_termine|length > 0 %}
                                 <button class="btn btn-info" onclick="marquer_lu([{% for item in categorie.ids_termine %}{{ item }},{% endfor %}], {{ categorie.id}})">
                                     <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
