--- a/templates/categorie.html
+++ b/templates/categorie.html
@@ -15,7 +15,7 @@
                                 </button>
                                 {% endif %}
                                 {%if categorie.ids_termine|length > 0 %}
-                                <button class="btn btn-info" onclick="marquer_lu([{% for item in categorie.ids_termine %}{{ item }},{% endfor %}], {{ categorie.id}})">
+                                <button class="btn btn-info" onclick="marquer_lu('{{ url_for('minisab.marquer_article_lu', lunonlu=0) }}', [{% for item in categorie.ids_termine %}{{ item }},{% endfor %}], {{ categorie.id}})">
                                     <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
                                 </button>
                                 {% endif %}
