--- a/templates/traitement_en_cours.html
+++ b/templates/traitement_en_cours.html
@@ -26,11 +26,20 @@
     <div class="container-fluid" id="app">
         <div class="page-header">
             <div class="row">
-                <div class="col-md-11">
-                    <h1>Minisab <span class="badge">{{ version }}</span></h1>
+                <h1>
+                <div class="col-md-9">
+                    Minisab <span class="badge">{{ version }}</span>
                 </div>
-                <div class="col-md-1">
-                    <h1><a class="btn btn-link btn-lg" href="{{ url_for('minisab.index') }}"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a></h1>
+                <div class="col-md-3">
+                    <div class="btn-group" role="group" aria-label="...">
+                        <a class="btn btn-link btn-lg" href="{{ url_for('minisab.index') }}"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a>
+                        <button class="btn btn-info" onclick="lancer_url('{{ url_for('minisab.check_urls') }}', 'output')">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
+                        </button>
+                        <button class="btn btn-info" onclick="lancer_url('{{ url_for('minisab.concat_nzb') }}', 'output')">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -53,6 +62,7 @@
             {% endfor %}
         {% endfor %}
         <br>
+        <textarea id="output" name="Output"></textarea>
 
     </div>
 </body>
