Tous fonctionne avec l'envoie sabnzbd
Ajout aussi du nettoyage de la recherche pour un article.

--- a/templates/article.html
+++ b/templates/article.html
@@ -21,7 +21,7 @@
         <h4>
         <a href="{{ item.link }}" target="_blank">{{ item.title }}</a>
         <button class="btn btn-default" onclick="marquer_lu('{{ url_for('minisab.marquer_article_lu', lunonlu=0) }}', [{{ item.id }} ], {{ item.categorie.id}})">
-            <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
+            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"/>
         </button>
         <button class="btn btn-default" onclick="marquer_favoris('{{ url_for('minisab.marquer_article_favoris_categorie', id_article=item.id) }}', {{ item.id }}, {{ item.categorie.id}}, {{ categorie_favoris_id }})">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"/>
@@ -31,6 +31,12 @@
         </button>
         <button class="btn btn-default {{ 'disabled' if item.recherche|length == 0 }}" data-toggle="collapse" data-parent="#art_{{ item.id }}" data-target="#recresult_{{ item.id }}">
             <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"/>               
+        </button>
+        <button class="btn btn-default {{ 'disabled' if item.recherche|length == 0 }}" onclick="envoyer_sab_tous('{{ url_for('minisab.lancer_tout_telecharger', id_article=item.id) }}', {{ item.id }})">
+            <span class="glyphicon glyphicon-asterisk" aria-hidden="true"/>               
+        </button>
+        <button class="btn btn-default {{ 'disabled' if item.recherche|length == 0 }}" onclick="nettoyer_recherche('{{ url_for('minisab.nettoyer_recherche', id_article=item.id) }}', {{ item.id }})">
+            <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
         </button>
         </h4>
     </div>
@@ -74,7 +80,6 @@
 </div>   
     {% if item.recherche|length > 0 %}
     <div class="list-group collapse" id="recresult_{{ item.id }}">
-          <button type="button" class="list-group-item resultat_recherche" id="recherche_tous" onclick="envoyer_sab_tous('{{ url_for('minisab.lancer_tout_telecharger', id_article=item.id) }}', {{ item.id }})" data-toggle="tooltip" title="Tous">Tous</button>
         {% for item_recherche in item.recherche %}
             {% if item_recherche.id_sabnzbd != '' %}
           <button type="button" class="list-group-item list-group-item-danger resultat_recherche" id="recherche_{{ item_recherche.id }}" data-toggle="tooltip" title="{{ item_recherche.title|escape() }}"><span class="badge">{{ item_recherche.taille }}</span>{{ item_recherche.title|truncate(40) }}</button>
